2011-10-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r98085.
        http://trac.webkit.org/changeset/98085
        https://bugs.webkit.org/show_bug.cgi?id=70589

        It broke the build (Requested by Ossy on #webkit).

        * tests/util.h:

2011-10-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] Unreviewed buildfix for newer Qt5. Remove duplicated defines.

        * tests/util.h:
        (waitForSignal):

2011-10-20  Carol Szabo  <carol@webkit.org>

        Tiled Backing Store does not regenerate tiles when it should
        https://bugs.webkit.org/show_bug.cgi?id=57798

        Reviewed by Darin Adler.

        Provided test for this bug. Changed the name of the resource I added
        for a previous test so that the name is descriptive such that it can
        be shared across several tests.

        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::bug57798):
        (tst_QGraphicsWebView::bug56929):
        * tests/qgraphicswebview/tst_qgraphicswebview.qrc:

2011-10-18  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Merge QML plugin for WebKit2 with the original WebKit1 plugin

        We don't need a separate plugin, as we no longer expose the WK2
        APIs under QtWebKit.experimental, but now use QtWebKit. The version
        was also changed to 3.0 instead of 5.0, as the original plugin was
        versioned 1.0, and bumping to 3.0 fits the scheme used by QtWebKit releases.

        Reviewed by Andreas Kling.

        * declarative/declarative.pro:
        * declarative/plugin.cpp:
        (WebKitQmlPlugin::registerTypes):

2011-10-15  Adam Barth  <abarth@webkit.org>

        Rename ENABLE(TILED_BACKING_STORE) to USE(TILED_BACKING_STORE)
        https://bugs.webkit.org/show_bug.cgi?id=70194

        Reviewed by Daniel Bates.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::_q_scaleChanged):
        (QGraphicsWebView::QGraphicsWebView):